<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Twatter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="dummy_user_name">Foonami Barts</string>
    <string name="dummy_screen_name">\@foo_barts</string>
    <string name="dummy_time">4h</string>
    <string name="dummy_tweet_body">Tweet dummy body. Tweet dummy body. Tweet dummy body with humongous words like blahblahblahblahblahblahhblah?</string>
    <string name="menu_title_compose">Compose</string>
    <string name="title_activity_compose">Tweet Away</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_compose">Compose</string>
    <string name="et_hint_compose">What\'s happenning</string>
    <string name="tv_remaining_chars">140</string>
    <string name="title_activity_profile">Profile</string>
    <string name="word_tweets">TWEETS</string>
    <string name="word_following">FOLLOWING</string>
    <string name="word_followers">FOLLOWERS</string>
    <string name="test_number_23">23</string>
    <string name="profile_image">profile image</string>
    <string name="icon_image">profile image</string>
    <string name="title_activity_timeline_pager">TimelinePagerActivity</string>
    <string name="label_reply">Reply</string>
    <string name="title_activity_image_view">ImageViewActivity</string>

</resources>