<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="7dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/icon_image" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:textStyle="bold"
        android:text="@string/dummy_user_name" />
    
    
    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvUserName"
        android:layout_marginLeft="2dp"
        android:text="@string/dummy_screen_name"
        android:textColor="@android:color/darker_gray"
        android:layout_alignBaseline="@+id/tvUserName"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_below="@+id/tvUserName"
        android:text="@string/dummy_tweet_body" 
        android:layout_marginBottom="7dp"
        android:layout_marginRight="5dp"/>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/dummy_time"
        android:layout_alignTop="@+id/tvUserName"
        android:layout_marginRight="5dp"
        android:textColor="@android:color/darker_gray"
        android:textAppearance="?android:attr/textAppearanceSmall" />


</RelativeLayout>
